fix(aiknl): fix bad alignment on knowledge page (#7394)
* fix(aiknl): fix bad alignment on knowledge page

* fix(aiknl): correct padding top for help center

--- a/src/pages/aiAgent/AiAgentKnowledgeContainer.less
+++ b/src/pages/aiAgent/AiAgentKnowledgeContainer.less
@@ -6,6 +6,10 @@
         max-width: 728px; // because 680 + 24 + 24 (paddings)
     }
 
+    .configurationSection {
+        padding-top: @layout-spacing-m;
+    }
+
     .sectionContainer {
         display: flex;
         flex-direction: column;
@@ -23,6 +27,10 @@
     }
 
     .label {
+        margin-bottom: @layout-spacing-xs;
+    }
+
+    .labelSection {
         display: flex;
         flex-direction: column;
         gap: @layout-spacing-xxs;
